test/pass/offsets.ditto
func should_be_2()
    int a;
    if true then
        int b;
    end
    int c;
end