test/fail/bind/then-ends-scope.ditto
func main()
    if true then
        int a;
    else 
        a;
    end
end